[metadata]
name = unbound-sinkhole
version = 0.1
description = Script for sinkholing hosts using Unbound.
keywords = dns, sinkhole, unbound
license = MIT

[options]
packages = find:
entry_points =
    [console_script]
    unbound-sinkhole = unbound_sinkhole.cli:main
test_suite = unbound_sinkhole.tests
